fixing spacing issues

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -136,6 +136,7 @@ input[type="submit"] {
     color: #000000;
     cursor: pointer;
     padding: 10px;
+    padding-bottom: 50px;
     border: none;
     border-radius: 4px;
 }
